--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=890,631
+Size=445,621
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,11 +10,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1389,-652
+ViewportPos=1443,213
 ViewportId=0x59819E39
 Size=550,680
 Collapsed=0
 
+[Window][DockSpace Demo]
+Pos=0,19
+Size=445,621
+Collapsed=0
+
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=2441,277 Size=890,631 CentralNode=1
+DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=949,211 Size=445,621 CentralNode=1
+DockSpace ID=0xC0DFADC4 Window=0xD0388BC8 Pos=949,230 Size=445,602 CentralNode=1
 
