--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=445,621
+Size=890,631
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,17 +10,46 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1443,213
-ViewportId=0x59819E39
-Size=550,680
+Pos=0,19
+Size=890,631
 Collapsed=0
+DockId=0x08BD597D,0
 
 [Window][DockSpace Demo]
 Pos=0,19
 Size=445,621
 Collapsed=0
 
+[Window][ImPlot Demo]
+Pos=0,19
+Size=890,631
+Collapsed=0
+DockId=0x08BD597D,1
+
+[Window][Style Editor (ImPlot)]
+ViewportPos=94,117
+ViewportId=0x09E6B617
+Size=415,762
+Collapsed=0
+
+[Window][About Dear ImGui]
+ViewportPos=120,143
+ViewportId=0x28EBAACF
+Size=570,160
+Collapsed=0
+
+[Window][Radar Plot]
+Pos=0,19
+Size=890,631
+Collapsed=0
+DockId=0x08BD597D,2
+
+[Table][0x0740DB01,3]
+RefScale=13
+Column 0  Width=75
+Column 1  Width=75
+Column 2  Weight=1.0000
+
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=949,211 Size=445,621 CentralNode=1
-DockSpace ID=0xC0DFADC4 Window=0xD0388BC8 Pos=949,230 Size=445,602 CentralNode=1
+DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=865,241 Size=890,631 CentralNode=1 Selected=0x5E5F7166
 
