--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SENSOR_SIM_TARGETS
   src/app/entry_point.cpp
   src/app/sensor_sim.cpp
   src/app/radar_plot.cpp
+  src/app/trajectory_planer.cpp
   src/app/utils/layerstack.cpp
 )
 
