--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=890,631
+Size=445,631
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=890,631
+Size=445,631
 Collapsed=0
 DockId=0x08BD597D,0
 
@@ -22,7 +22,7 @@ Collapsed=0
 
 [Window][ImPlot Demo]
 Pos=0,19
-Size=890,631
+Size=445,631
 Collapsed=0
 DockId=0x08BD597D,1
 
@@ -40,9 +40,15 @@ Collapsed=0
 
 [Window][Radar Plot]
 Pos=0,19
-Size=890,631
+Size=445,631
 Collapsed=0
 DockId=0x08BD597D,2
+
+[Window][Tragectory Planer]
+Pos=0,19
+Size=445,631
+Collapsed=0
+DockId=0x08BD597D,3
 
 [Table][0x0740DB01,3]
 RefScale=13
@@ -51,5 +57,5 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=865,241 Size=890,631 CentralNode=1 Selected=0x5E5F7166
+DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=190,232 Size=445,631 CentralNode=1 Selected=0x30A7E3CE
 
