--- a/imgui.ini
+++ b/imgui.ini
@@ -57,5 +57,5 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=242,284 Size=445,631 CentralNode=1 Selected=0x30A7E3CE
+DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=62,126 Size=445,631 CentralNode=1 Selected=0x2C983182
 
