Building new setup [faulty]

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,10 +10,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=445,631
+Pos=0,282
+Size=445,368
 Collapsed=0
-DockId=0x08BD597D,0
+DockId=0x00000002,0
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -21,10 +21,10 @@ Size=445,621
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=0,19
-Size=445,631
+Pos=0,282
+Size=445,368
 Collapsed=0
-DockId=0x08BD597D,1
+DockId=0x00000002,1
 
 [Window][Style Editor (ImPlot)]
 ViewportPos=94,117
@@ -39,16 +39,22 @@ Size=570,160
 Collapsed=0
 
 [Window][Radar Plot]
-Pos=0,19
-Size=445,631
+Pos=0,282
+Size=445,368
 Collapsed=0
-DockId=0x08BD597D,2
+DockId=0x00000002,2
 
 [Window][Tragectory Planer]
-Pos=0,19
-Size=445,631
+Pos=0,282
+Size=445,368
 Collapsed=0
-DockId=0x08BD597D,3
+DockId=0x00000002,3
+
+[Window][Sensor Control]
+Pos=0,19
+Size=445,261
+Collapsed=0
+DockId=0x00000001,0
 
 [Table][0x0740DB01,3]
 RefScale=13
@@ -57,5 +63,7 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=258,322 Size=445,631 CentralNode=1 Selected=0xBF91F0DD
+DockSpace   ID=0x08BD597D Window=0x1BBC0F80 Pos=356,420 Size=445,631 Split=Y Selected=0x2C983182
+  DockNode  ID=0x00000001 Parent=0x08BD597D SizeRef=445,261 Selected=0x29B42EED
+  DockNode  ID=0x00000002 Parent=0x08BD597D SizeRef=445,368 CentralNode=1 Selected=0x2C983182
 
