Fix bug in displaying trajectories and ad guis

--- a/imgui.ini
+++ b/imgui.ini
@@ -63,7 +63,7 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace   ID=0x08BD597D Window=0x1BBC0F80 Pos=356,420 Size=445,631 Split=Y Selected=0x2C983182
+DockSpace   ID=0x08BD597D Window=0x1BBC0F80 Pos=164,206 Size=445,631 Split=Y Selected=0x2C983182
   DockNode  ID=0x00000001 Parent=0x08BD597D SizeRef=445,261 Selected=0x29B42EED
-  DockNode  ID=0x00000002 Parent=0x08BD597D SizeRef=445,368 CentralNode=1 Selected=0x2C983182
+  DockNode  ID=0x00000002 Parent=0x08BD597D SizeRef=445,368 CentralNode=1 Selected=0x30A7E3CE
 
