Fix display bug + optimize

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=445,631
+Size=1163,815
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,8 +10,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,282
-Size=445,368
+Pos=0,362
+Size=1163,472
 Collapsed=0
 DockId=0x00000002,0
 
@@ -21,8 +21,8 @@ Size=445,621
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=0,282
-Size=445,368
+Pos=0,362
+Size=1163,472
 Collapsed=0
 DockId=0x00000002,1
 
@@ -39,22 +39,22 @@ Size=570,160
 Collapsed=0
 
 [Window][Radar Plot]
-Pos=0,282
-Size=445,368
+Pos=0,362
+Size=1163,472
 Collapsed=0
 DockId=0x00000002,2
 
 [Window][Tragectory Planer]
-Pos=0,282
-Size=445,368
+Pos=584,19
+Size=579,341
 Collapsed=0
-DockId=0x00000002,3
+DockId=0x00000004,0
 
 [Window][Sensor Control]
 Pos=0,19
-Size=445,261
+Size=582,341
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Table][0x0740DB01,3]
 RefScale=13
@@ -63,7 +63,9 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace   ID=0x08BD597D Window=0x1BBC0F80 Pos=164,206 Size=445,631 Split=Y Selected=0x2C983182
-  DockNode  ID=0x00000001 Parent=0x08BD597D SizeRef=445,261 Selected=0x29B42EED
-  DockNode  ID=0x00000002 Parent=0x08BD597D SizeRef=445,368 CentralNode=1 Selected=0x30A7E3CE
+DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=268,310 Size=1163,815 Split=Y Selected=0x2C983182
+  DockNode    ID=0x00000001 Parent=0x08BD597D SizeRef=445,341 Split=X Selected=0x29B42EED
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=445,261 Selected=0x29B42EED
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=443,261 Selected=0x30A7E3CE
+  DockNode    ID=0x00000002 Parent=0x08BD597D SizeRef=445,288 CentralNode=1 Selected=0x2C983182
 
