--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=1163,815
+Size=1400,931
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,10 +10,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,362
-Size=1163,472
+Pos=0,437
+Size=1036,513
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000002,2
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -21,10 +21,10 @@ Size=445,621
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=0,362
-Size=1163,472
+Pos=0,437
+Size=1036,513
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000002,0
 
 [Window][Style Editor (ImPlot)]
 ViewportPos=94,117
@@ -39,22 +39,27 @@ Size=570,160
 Collapsed=0
 
 [Window][Radar Plot]
-Pos=0,362
-Size=1163,472
+Pos=0,437
+Size=1036,513
 Collapsed=0
-DockId=0x00000002,2
+DockId=0x00000002,1
 
 [Window][Tragectory Planer]
-Pos=584,19
-Size=579,341
+Pos=0,19
+Size=1036,416
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Sensor Control]
+Pos=1038,19
+Size=362,931
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][Sensor Control]
-Pos=0,19
-Size=582,341
+[Window][Adding Sensor]
+Pos=580,405
+Size=240,140
 Collapsed=0
-DockId=0x00000003,0
 
 [Table][0x0740DB01,3]
 RefScale=13
@@ -63,9 +68,9 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=268,310 Size=1163,815 Split=Y Selected=0x2C983182
-  DockNode    ID=0x00000001 Parent=0x08BD597D SizeRef=445,341 Split=X Selected=0x29B42EED
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=445,261 Selected=0x29B42EED
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=443,261 Selected=0x30A7E3CE
-  DockNode    ID=0x00000002 Parent=0x08BD597D SizeRef=445,288 CentralNode=1 Selected=0x2C983182
+DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=704,330 Size=1400,931 Split=X Selected=0x2C983182
+  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=526,834 Split=Y Selected=0x5E5F7166
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1311,416 Selected=0x30A7E3CE
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1311,627 CentralNode=1 Selected=0x2C983182
+  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=362,834 Selected=0x29B42EED
 
