--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,7 @@
     "xstring": "cpp",
     "xtree": "cpp",
     "xutility": "cpp",
-    "filesystem": "cpp"
+    "filesystem": "cpp",
+    "typeindex": "cpp"
   }
 }
