--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=2880,1688
+Size=1400,931
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,10 +10,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,437
-Size=2223,1270
+ViewportPos=1065,1037
+ViewportId=0x59819E39
+Size=743,513
 Collapsed=0
-DockId=0x00000002,2
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -22,7 +22,7 @@ Collapsed=0
 
 [Window][ImPlot Demo]
 Pos=0,437
-Size=2223,1270
+Size=743,513
 Collapsed=0
 DockId=0x00000002,0
 
@@ -40,19 +40,19 @@ Collapsed=0
 
 [Window][Radar Plot]
 Pos=0,437
-Size=2223,1270
+Size=743,513
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Tragectory Planer]
 Pos=0,19
-Size=2223,416
+Size=743,416
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Sensor Control]
-Pos=2225,19
-Size=655,1688
+Pos=745,19
+Size=655,931
 Collapsed=0
 DockId=0x00000004,0
 
@@ -68,7 +68,7 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=0,64 Size=2880,1688 Split=X Selected=0x2C983182
+DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=62,126 Size=1400,931 Split=X Selected=0x2C983182
   DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=2223,834 Split=Y Selected=0x5E5F7166
     DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1311,416 Selected=0x30A7E3CE
     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1311,627 CentralNode=1 Selected=0x2C983182
