Fix bugs for compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,13 @@ FetchContent_MakeAvailable(Eigen)
 # Add the gui dependencies
 include(cmake/target_imgui_implot_glfw.cmake)
 
-set(SENSOR_SIM_TARGETS
+
+set(SENSOR_SIM_APP_TARGETS
   src/app/entry_point.cpp
-  src/app/sensor_sim.cpp
   src/app/radar_plot.cpp
+  src/app/sensor_sim.cpp
+  src/app/sensor_viewport.cpp
+  src/app/target_plot.cpp
   src/app/trajectory_planer.cpp
   src/app/utils/layerstack.cpp
   src/sensor_simulator.cpp
@@ -48,11 +51,11 @@ set(SENSOR_SIM_TARGETS
 
 if(WIN32)
   add_executable(SensorSimulator WIN32
-    ${SENSOR_SIM_TARGETS}
+    ${SENSOR_SIM_APP_TARGETS}
   )
 else()
   add_executable(SensorSimulator
-    ${SENSOR_SIM_TARGETS}
+    ${SENSOR_SIM_APP_TARGETS}
   )
 endif()
 
