--- a/src/app/imgui.ini
+++ b/src/app/imgui.ini
@@ -10,16 +10,18 @@ Collapsed=0
 
 [Window][Sensor Fusion Viewport]
 Pos=60,60
-Size=226,356
+Size=437,557
 Collapsed=0
 
 [Window][Tragectory Planer]
-Pos=60,60
+ViewportPos=467,891
+ViewportId=0xCB62C638
 Size=216,415
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+ViewportPos=1189,695
+ViewportId=0x59819E39
 Size=550,680
 Collapsed=0
 
@@ -30,10 +32,15 @@ Size=600,750
 Collapsed=0
 
 [Window][Sensor Control]
-Pos=526,381
-Size=163,92
+Pos=526,64
+Size=682,813
+Collapsed=0
+
+[Window][Adding Sensor]
+Pos=580,416
+Size=240,117
 Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=356,420 Size=1400,931 CentralNode=1
+DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=307,371 Size=1400,931 CentralNode=1
 
