--- a/imgui.ini
+++ b/imgui.ini
@@ -46,9 +46,9 @@ DockId=0x00000002,1
 
 [Window][Tragectory Planer]
 Pos=0,19
-Size=743,416
+Size=743,314
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][Sensor Control]
 Pos=745,19
@@ -67,6 +67,12 @@ Size=743,513
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Wave Trajectory Settings]
+Pos=0,335
+Size=743,100
+Collapsed=0
+DockId=0x00000006,0
+
 [Table][0x0740DB01,3]
 RefScale=13
 Column 0  Width=75
@@ -74,9 +80,11 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=111,175 Size=1400,931 Split=X Selected=0x2C983182
-  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=2223,834 Split=Y Selected=0x5E5F7166
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1311,416 Selected=0x30A7E3CE
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1311,627 CentralNode=1 Selected=0x53EA6536
-  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=655,834 Selected=0x29B42EED
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=405,469 Size=1400,931 Split=X Selected=0x2C983182
+  DockNode      ID=0x00000003 Parent=0x08BD597D SizeRef=2223,834 Split=Y Selected=0x5E5F7166
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1311,416 Split=Y Selected=0x30A7E3CE
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=743,314 Selected=0x30A7E3CE
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=743,100 Selected=0x3F61D2D1
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1311,627 CentralNode=1 Selected=0x53EA6536
+  DockNode      ID=0x00000004 Parent=0x08BD597D SizeRef=655,834 Selected=0x29B42EED
 
