--- a/imgui.ini
+++ b/imgui.ini
@@ -10,10 +10,11 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1510,1421
-ViewportId=0x59819E39
-Size=743,513
+ViewportPos=1816,987
+ViewportId=0x78C57832
+Size=1231,725
 Collapsed=0
+DockId=0x00000007,1
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -21,10 +22,11 @@ Size=445,621
 Collapsed=0
 
 [Window][ImPlot Demo]
-ViewportPos=1280,542
-ViewportId=0xFB7C0A12
+ViewportPos=1816,987
+ViewportId=0x78C57832
 Size=1231,725
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Style Editor (ImPlot)]
 ViewportPos=94,117
@@ -45,16 +47,16 @@ Collapsed=0
 DockId=0x00000002,1
 
 [Window][Tragectory Planer]
-Pos=0,19
-Size=743,452
+Pos=746,467
+Size=654,483
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000006,0
 
 [Window][Sensor Control]
-Pos=745,19
-Size=655,931
+Pos=746,19
+Size=654,446
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Window][Adding Sensor]
 Pos=580,416
@@ -62,8 +64,8 @@ Size=240,117
 Collapsed=0
 
 [Window][Sensor Fusion Viewport]
-Pos=0,473
-Size=743,477
+Pos=0,19
+Size=744,931
 Collapsed=0
 DockId=0x00000002,0
 
@@ -71,7 +73,7 @@ DockId=0x00000002,0
 Pos=0,335
 Size=743,100
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000001,0
 
 [Table][0x0740DB01,3]
 RefScale=13
@@ -80,11 +82,12 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=190,232 Size=1400,931 Split=X Selected=0x2C983182
-  DockNode      ID=0x00000003 Parent=0x08BD597D SizeRef=2223,834 Split=Y Selected=0x5E5F7166
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1311,452 Split=Y Selected=0x30A7E3CE
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=743,314 Selected=0x30A7E3CE
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=743,100 Selected=0x3F61D2D1
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1311,477 CentralNode=1 Selected=0x53EA6536
-  DockNode      ID=0x00000004 Parent=0x08BD597D SizeRef=655,834 Selected=0x29B42EED
+DockNode      ID=0x00000007 Pos=1816,987 Size=1231,725 Selected=0xBF91F0DD
+DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=209,273 Size=1400,931 Split=X Selected=0x2C983182
+  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=744,834 Split=Y Selected=0x5E5F7166
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1311,452 Selected=0x30A7E3CE
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1311,477 CentralNode=1 Selected=0x53EA6536
+  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=654,834 Split=Y Selected=0x29B42EED
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=592,446 Selected=0x29B42EED
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=592,483 Selected=0x30A7E3CE
 
