--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ include(cmake/target_imgui_implot_glfw.cmake)
 
 set(SENSOR_SIM_APP_TARGETS
   src/app/entry_point.cpp
+  src/app/kalman_sim.cpp
   src/app/radar_plot.cpp
   src/app/sensor_sim.cpp
   src/app/sensor_viewport.cpp
