--- a/imgui.ini
+++ b/imgui.ini
@@ -44,7 +44,7 @@ Collapsed=0
 Pos=0,437
 Size=743,513
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000009,1
 
 [Window][Tragectory Planer]
 Pos=746,467
@@ -65,15 +65,27 @@ Collapsed=0
 
 [Window][Sensor Fusion Viewport]
 Pos=0,19
-Size=744,931
+Size=744,483
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000009,0
 
 [Window][Wave Trajectory Settings]
 Pos=0,335
 Size=743,100
 Collapsed=0
 DockId=0x00000001,0
+
+[Window][Kalman Filter Control]
+Pos=0,504
+Size=744,446
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Kalman Filter Metadata]
+Pos=0,504
+Size=744,446
+Collapsed=0
+DockId=0x00000008,1
 
 [Table][0x0740DB01,3]
 RefScale=13
@@ -82,12 +94,14 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000007 Pos=1045,887 Size=1231,725 Selected=0xBF91F0DD
-DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=60,102 Size=1400,931 Split=X Selected=0x2C983182
-  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=744,834 Split=Y Selected=0x5E5F7166
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1311,452 Selected=0x30A7E3CE
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1311,477 CentralNode=1 Selected=0x53EA6536
-  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=654,834 Split=Y Selected=0x29B42EED
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=592,446 Selected=0x29B42EED
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=592,483 Selected=0x30A7E3CE
+DockNode        ID=0x00000007 Pos=1045,887 Size=1231,725 Selected=0xBF91F0DD
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=307,529 Size=1400,931 Split=X Selected=0x2C983182
+  DockNode      ID=0x00000003 Parent=0x08BD597D SizeRef=744,834 Split=Y Selected=0x5E5F7166
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1311,452 Selected=0x30A7E3CE
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1311,477 Split=Y Selected=0x53EA6536
+      DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=744,483 CentralNode=1 Selected=0x53EA6536
+      DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=744,446 Selected=0x3AA63C40
+  DockNode      ID=0x00000004 Parent=0x08BD597D SizeRef=654,834 Split=Y Selected=0x29B42EED
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=592,446 Selected=0x29B42EED
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=592,483 Selected=0x30A7E3CE
 
