--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1410,983
+ViewportPos=1409,1197
 ViewportId=0x78C57832
 Size=1231,725
 Collapsed=0
@@ -22,7 +22,7 @@ Size=445,621
 Collapsed=0
 
 [Window][ImPlot Demo]
-ViewportPos=1410,983
+ViewportPos=1409,1197
 ViewportId=0x78C57832
 Size=1231,725
 Collapsed=0
@@ -82,10 +82,10 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Kalman Filter Metadata]
-Pos=0,449
+ViewportPos=1594,552
+ViewportId=0xFBE8EF73
 Size=744,501
 Collapsed=0
-DockId=0x00000008,1
 
 [Table][0x0740DB01,3]
 RefScale=13
@@ -94,8 +94,8 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode        ID=0x00000007 Pos=1410,983 Size=1231,725 Selected=0xBF91F0DD
-DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=86,128 Size=1400,931 Split=X Selected=0x2C983182
+DockNode        ID=0x00000007 Pos=1409,1197 Size=1231,725 Selected=0xBF91F0DD
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=405,469 Size=1400,931 Split=X Selected=0x2C983182
   DockNode      ID=0x00000003 Parent=0x08BD597D SizeRef=744,834 Split=Y Selected=0x5E5F7166
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1311,452 Selected=0x30A7E3CE
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1311,477 Split=Y Selected=0x53EA6536
