--- a/include/sensfus/sim/imgui.ini
+++ b/include/sensfus/sim/imgui.ini
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Sensor Fusion Viewport]
-Pos=379,301
-Size=226,379
+Pos=60,60
+Size=273,379
 Collapsed=0
 
 [Window][Tragectory Planer]
@@ -24,33 +24,34 @@ Size=550,680
 Collapsed=0
 
 [Window][ImPlot Demo]
-ViewportPos=420,919
+ViewportPos=50,50
 ViewportId=0xFB7C0A12
 Size=600,750
 Collapsed=0
 
 [Window][Sensor Control]
-Pos=821,35
-Size=463,210
+Pos=200,92
+Size=385,115
 Collapsed=0
 
 [Window][Kalman Filter Metadata]
-ViewportPos=558,704
+ViewportPos=841,845
 ViewportId=0xFBE8EF73
 Size=1559,126
 Collapsed=0
 
 [Window][Kalman Filter Control]
-ViewportPos=730,938
+ViewportPos=912,951
 ViewportId=0xC534684F
 Size=1559,272
 Collapsed=0
 
 [Window][Adding Sensor]
-Pos=580,416
+ViewportPos=874,733
+ViewportId=0x48F8D975
 Size=240,117
 Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=34,76 Size=1400,931 CentralNode=1
+DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=294,336 Size=1400,931 CentralNode=1
 
