--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1894,1409
+ViewportPos=1984,1563
 ViewportId=0x78C57832
 Size=1231,725
 Collapsed=0
@@ -22,7 +22,7 @@ Size=445,621
 Collapsed=0
 
 [Window][ImPlot Demo]
-ViewportPos=1894,1409
+ViewportPos=1984,1563
 ViewportId=0x78C57832
 Size=1231,725
 Collapsed=0
@@ -94,13 +94,13 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode        ID=0x00000007 Pos=1894,1409 Size=1231,725 Selected=0xBF91F0DD
-DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=111,188 Size=2200,1168 Split=X Selected=0x2C983182
+DockNode        ID=0x00000007 Pos=1984,1563 Size=1231,725 Selected=0x5E5F7166
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=307,384 Size=2200,1168 Split=X Selected=0x2C983182
   DockNode      ID=0x00000003 Parent=0x08BD597D SizeRef=2048,834 Split=Y Selected=0x5E5F7166
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1311,452 Selected=0x30A7E3CE
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1311,477 Split=Y Selected=0x53EA6536
       DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=744,635 CentralNode=1 Selected=0x53EA6536
-      DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=744,538 Selected=0x02424147
+      DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=744,538 Selected=0x3AA63C40
   DockNode      ID=0x00000004 Parent=0x08BD597D SizeRef=829,834 Split=Y Selected=0x29B42EED
     DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=592,651 Selected=0x29B42EED
     DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=592,514 Selected=0x30A7E3CE
