Current working state - restart buggy

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][WindowOverViewport_11111111]
-Pos=0,22
-Size=2200,1178
+Pos=0,32
+Size=2200,1168
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1984,1563
+ViewportPos=2852,1705
 ViewportId=0x78C57832
 Size=1231,725
 Collapsed=0
@@ -22,7 +22,7 @@ Size=445,621
 Collapsed=0
 
 [Window][ImPlot Demo]
-ViewportPos=1984,1563
+ViewportPos=2852,1705
 ViewportId=0x78C57832
 Size=1231,725
 Collapsed=0
@@ -47,14 +47,14 @@ Collapsed=0
 DockId=0x00000009,1
 
 [Window][Tragectory Planer]
-Pos=1371,681
-Size=829,519
+Pos=1371,686
+Size=829,514
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Sensor Control]
-Pos=1371,22
-Size=829,657
+Pos=1371,32
+Size=829,651
 Collapsed=0
 DockId=0x00000005,0
 
@@ -64,8 +64,8 @@ Size=302,194
 Collapsed=0
 
 [Window][Sensor Fusion Viewport]
-Pos=0,22
-Size=1369,638
+Pos=0,32
+Size=1368,627
 Collapsed=0
 DockId=0x00000009,0
 
@@ -77,13 +77,13 @@ DockId=0x00000001,0
 
 [Window][Kalman Filter Control]
 Pos=0,662
-Size=1369,538
+Size=1368,538
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Kalman Filter Metadata]
 Pos=0,662
-Size=1369,538
+Size=1368,538
 Collapsed=0
 DockId=0x00000008,1
 
@@ -94,8 +94,8 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode        ID=0x00000007 Pos=1984,1563 Size=1231,725 Selected=0x5E5F7166
-DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=112,157 Size=2200,1178 Split=X Selected=0x2C983182
+DockNode        ID=0x00000007 Pos=2852,1705 Size=1231,725 Selected=0xBF91F0DD
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=111,188 Size=2200,1168 Split=X Selected=0x2C983182
   DockNode      ID=0x00000003 Parent=0x08BD597D SizeRef=2048,834 Split=Y Selected=0x5E5F7166
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1311,452 Selected=0x30A7E3CE
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1311,477 Split=Y Selected=0x53EA6536
