--- a/imgui.ini
+++ b/imgui.ini
@@ -100,7 +100,7 @@ DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=258,335 Size=2200,1168 Split
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1311,452 Selected=0x30A7E3CE
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1311,477 Split=Y Selected=0x53EA6536
       DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=744,635 CentralNode=1 Selected=0x53EA6536
-      DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=744,538 Selected=0x3AA63C40
+      DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=744,538 Selected=0x02424147
   DockNode      ID=0x00000004 Parent=0x08BD597D SizeRef=829,834 Split=Y Selected=0x29B42EED
     DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=592,651 Selected=0x29B42EED
     DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=592,514 Selected=0x30A7E3CE
